--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    
   body
     block content
+    //img(src="/images/lenna.jpg")
+    //script(src='javascript/processing_cv4.js',type='text/javascript')
