opencv write on jage

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,10 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+block load_cv
+
+//
+  block cv_script
+  script(src="https://docs.opencv.org/3.4.1/opencv.js")
+
