--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,10 +1,46 @@
 doctype html
 html
   head
+    meta(charset='utf-8')
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    
   body
-    block content
-    //img(src="/images/lenna.jpg")
-    //script(src='javascript/processing_cv4.js',type='text/javascript')
+    h2 Hello OpenCV.js
+    p#status OpenCV.js is loading...
+    div
+      .inputoutput
+        img#imageSrc(alt='No Image')
+        |     
+        .caption
+          | imageSrc 
+          input#fileInput(type='file', name='file')
+      |   
+      .inputoutput
+        canvas#canvasOutput
+        |     
+        .caption canvasOutput
+    script(type='text/javascript').
+      let imgElement = document.getElementById('imageSrc');
+      let inputElement = document.getElementById('fileInput');
+      inputElement.addEventListener('change', (e) => {
+      imgElement.src = URL.createObjectURL(e.target.files[0]);
+      }, false);
+      imgElement.onload = function() {
+      let input_img = cv.imread(imgElement);
+      let resize_img = new cv.Mat();
+      let dsize = new cv.Size(100, 100);
+      // 100x100にリサイズ
+      cv.resize(input_img, resize_img, dsize, 0, 0, cv.INTER_AREA);
+      input_img.delete();
+
+      let gray_img = new cv.Mat();
+      //グレイスケール化
+      cv.cvtColor(resize_img,gray_img, cv.COLOR_RGBA2GRAY, 0);
+      cv.imshow('canvasOutput', gray_img);
+      resize_img.delete(); gray_img.delete();
+      };
+      function onOpenCvReady() {
+      document.getElementById('status').innerHTML = 'OpenCV.js is ready.';
+      }
+    script(async='', src='https://docs.opencv.org/3.4.1/opencv.js', onload='onOpenCvReady();', type='text/javascript')
+
