--- a/nodejs/views/layout.jade
+++ b/nodejs/views/layout.jade
@@ -5,7 +5,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    h2 Hello OpenCV.js and Tensorflow.js
+    h2 OpenCV.js and Tensorflow.js demo
     p#status1 OpenCV.js is loading...
     p#status2 Tensorflow.js is loading...
 
@@ -31,4 +31,5 @@ html
     script(src="/javascripts/tensorjs.js",type='text/javascript')
     script(src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0",onload='OnTensorflowReady();',type='text/javascript')
 
-    p#result
+    p#result1
+    p#result2
