声優識別verに変更

--- a/nodejs/views/layout.jade
+++ b/nodejs/views/layout.jade
@@ -22,7 +22,7 @@ html
         |     
         .caption canvasOutput
 
-    button(onClick="tf_predict();")予測
+    button(onClick="tf_predict();")予測開始
 
 
     script(src="/javascripts/processing_cv4.js",type='text/javascript')
