--- a/nodejs/views/layout.jade
+++ b/nodejs/views/layout.jade
@@ -22,12 +22,16 @@ html
       button(onclick='copyFrame();')フレーム取得
       button(onClick="tf_predict();")予測開始
 
+    //opencv処理
     script(src="/javascripts/processing_cv4.js",type='text/javascript')
     script(async='', src='https://docs.opencv.org/3.4.6/opencv.js', onload='onOpenCvReady();', type='text/javascript')
-
+    //tensorflowjs処理
     script(src="/javascripts/tensorjs.js",type='text/javascript')
     script(src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0",onload='OnTensorflowReady();',type='text/javascript')
 
+
+    //カメラオブジェクト、外部スクリプトだとエラーが発生するためこちらに記入
+    //参考コード（https://qiita.com/qiita_mona/items/e58943cf74c40678050a）
     script(type='text/javascript').
       // getUserMedia が使えないときは、『getUserMedia()が利用できないブラウザです！』と言ってね。
       if (typeof navigator.mediaDevices.getUserMedia !== 'function') {
